samples/_failures_safe/1761400135_427aa5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aad12fa4.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_aad12fa4.c:165:28: error: expected ‘)’ at end of input
  165 |         if (!token_list_add
      |            ~               ^
      |                            )
./samples/SAFE/__tmp_aad12fa4.c:165:9: error: expected declaration or statement at end of input
  165 |         if (!token_list_add
      |         ^~
./samples/SAFE/__tmp_aad12fa4.c:165:9: error: expected declaration or statement at end of input
